.travis.yml: fix distcheck + checks taking too long for travis-ci
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
     - D=bionic I=appimage,up            # gcc
     - D=bionic I=checks,up
     - D=bionic I=tidy,up
+    - D=bionic I=clang,distcheck
     - D=artful I=gcc
     - D=xenial I=gcc
     # upcoming releases
