MISC: Dockerfile-apt: add includes for ebeast/v8bse/nodemodule.cc to clang-tidy
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-apt
+++ b/misc/Dockerfile-apt
@@ -108,6 +108,9 @@ RUN `intent tidy` && \
        -I. \
        -Isfi \
        -Ibeast-gtk \
+       -I external/v8pp/ \
+       -I ebeast/node_modules/node-gyp/cache/.node-gyp/iojs-*/src/ \
+       -I ebeast/node_modules/node-gyp/cache/.node-gyp/iojs-*/deps/v8/include/ \
        -DBSE_COMPILATION \
        -DGXK_COMPILATION \
        -D__TOPDIR__=\"`pwd`\" \
