Squash branch 'swesterfeld-jack-driver' from PR#31, by Stefan Westerfeld
* swesterfeld-jack-driver:
  DOCS: started jack howto
  JACK: remove trailing whitespaces
  JACK: use C++11 in-class initialization
  JACK: add actual values to ringbuffer size warning
  JACK: rename debug macro PDEBUG->JDEBUG
	Also: define at the start of the file.
  JACK: document TEST_DROPOUT() macro, useful for debugging the driver
  JACK: avoid vector<vector<T>> (emacs syntax highlighting)
  JACK: improve doxygen comments for FrameRingBuffer class
  JACK: string_format has been moved to Bse namespace
  JACK: prefix xrun messages with "JACK:" as well
  JACK: print a message on server shutdown
  JACK: at least show suppressed messages if BSE_DEBUG=pcm-jack is used
  JACK: implement latency callback
  JACK: get rid of deprecated jack_port_get_total_latency() function
  JACK: only auto connect ports to hardware if global setting is enabled
  BSE: added setting to enable/disable jack auto connect
  JACK: remove FIXMEs that need not be fixed within the driver
	 - non standard server names: use JACK_DEFAULT_SERVER
	 - keeping the connection open: should be done from outside the driver
  BSE: bse_pcm_handle_latency: handle NULL pointers as rlatency/wlatency
  BSE: return read and write latency separately in BsePcmHandle API
  JACK: return read and write latency seperately
  DRIVERS: pcm alsa: return read and write latency seperately
  BSE: return pcm device read latency and write latency seperately
  JACK: always use our own error function
	Don't output errors during jack_client_open(), as we usually can fallback
	to another driver.
  JACK: g_printerr -> Bse::printerr
  JACK: coding style fixes for members: m_foo -> foo_
  JACK: SIGPIPE initialization was moved to bse
  BSE: block SIGPIPE for all threads
	Initialization code moved here jack driver, in order to affect all threads.
  BUILD: support building without JACK
  JACK: clarify comment about user latency and ring buffer size choice
  JACK: a

--- a/configure.ac
+++ b/configure.ac
@@ -529,6 +529,18 @@ AC_DEFUN([MC_ASOUND_CHECK],
     CXXFLAGS="$saved_cxxflags"
     LDFLAGS="$saved_ldflags"
 ])
+AC_DEFUN([MC_JACK_REQUIREMENTS],
+[
+    AC_ARG_WITH([jack], AS_HELP_STRING([--without-jack], [Build Beast without JACK support]))
+
+    dnl check for jack unless --without-jack was used
+    if test "x$with_jack" != "xno"; then
+        PKG_CHECK_MODULES(JACK, jack >= 0.100.0, [with_jack="yes"], [with_jack="no"])
+    fi
+    AM_CONDITIONAL(WITH_JACK, [test "x$with_jack" != "xno"])
+    AC_SUBST(JACK_CFLAGS)
+    AC_SUBST(JACK_LIBS)
+])
 AC_DEFUN([MC_GXK_REQUIREMENTS],
 [
     dnl # required libraries, defines LIB*_CFLAGS and LIB*_LIBS:
@@ -675,6 +687,7 @@ AM_CONDITIONAL(WITH_PERLRULE, [test "$PERLRULE" != "#"])
 MC_I18N_REQUIREMENTS
 MC_BSE_REQUIREMENTS
 MC_ASOUND_CHECK
+MC_JACK_REQUIREMENTS
 MC_BSE_SNDDEV_CHECK
 MC_PYTHON_REQUIREMENTS
 MC_GXK_REQUIREMENTS
@@ -742,5 +755,6 @@ Autoconfiguration complete.
 	MMX/SSE optimizations:		${summary_mmx_sse}
 	NPM available:			${summary_npm}
 	MP3 support using libmad:	${summary_libmad}
+	JACK support:			${with_jack}
 
 EOF
