--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_install:
   - uname -a
   - cat /etc/os-release
   # avoid executable uploads for branches and PRs
-  - test "$TRAVIS_BRANCH^$TRAVIS_PULL_REQUEST" = "master^false" || I=$(sed '/\bappimage\b/s/,\?\bup\b//' <<<$I)
+  - test "$TRAVIS_BRANCH^$TRAVIS_PULL_REQUEST" = "master^false" || I=$(sed 's/,up\b//' <<<$I)
 
 install:
   - env | grep '^AUTHSECRET_\w\+=' >.secrets && unset `sed 's/=.*//' .secrets` || true
