MISC: Makefile.sub: pass original CC and CXX on to scan-build
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Makefile.sub
+++ b/misc/Makefile.sub
@@ -11,7 +11,7 @@ scan-build:
 	$(Q) mkdir -p $(CURDIR)/out/logs/
 	$(Q) echo "  CHECK   " "for CXX to resemble clang++"
 	$(Q) $(CXX) --version | grep '\bclang\b'
-	time scan-build -o $(CURDIR)/out/ $(MAKE) -j`nproc`
+	time scan-build -o $(CURDIR)/out/ --use-cc "$(CC)" --use-c++ "$(CXX)" $(MAKE) -j`nproc`
 	$(Q) shopt -s nullglob ; \
 	      for r in $(CURDIR)/out/20??-??-??-*/report-*.html ; do \
 		D=$$(sed -nr '/<!-- BUGDESC/ { s/^<!-- \w+ (.+) -->/\1/    ; p }' $$r) && \
@@ -21,7 +21,4 @@ scan-build:
 	      done > $(CURDIR)/out/logs/scan-build.log
 	time misc/blame-lines -b $(CURDIR)/out/logs/scan-build.log
 .PHONY: scan-build
-# This should use: 'scan-build --use-cc "$(CC)" --use-c++ "$(CXX)" make', because
-# scan-build defaults to g++ on linux, but its --use-c++ option is unreliable.
-# However, 'make scan-build' requires 'configure CC=clang CXX=g++' to generate
-# any reports.
+# Note, 'make scan-build' requires 'configure CC=clang CXX=g++' to generate any reports.
