--- a/misc/Makefile.sub
+++ b/misc/Makefile.sub
@@ -8,17 +8,25 @@
 
 # == scan-build ==
 scan-build:
-	$(Q) mkdir -p $(CURDIR)/out/logs/
+	$(Q) rm -rf out/scan-build/
+	$(Q) mkdir -p out/logs/ out/scan-build/
 	$(Q) echo "  CHECK   " "for CXX to resemble clang++"
 	$(Q) $(CXX) --version | grep '\bclang\b'
-	time scan-build -o $(CURDIR)/out/ --use-cc "$(CC)" --use-c++ "$(CXX)" $(MAKE) -j`nproc`
+	time scan-build -o out/scan-build/ --use-cc "$(CC)" --use-c++ "$(CXX)" $(MAKE) -j`nproc`
 	$(Q) shopt -s nullglob ; \
-	      for r in $(CURDIR)/out/20??-??-??-*/report-*.html ; do \
+	      for r in out/scan-build/20??-??-??-*/report-*.html ; do \
 		D=$$(sed -nr '/<!-- BUGDESC/ { s/^<!-- \w+ (.+) -->/\1/    ; p }' $$r) && \
 		F=$$(sed -nr '/<!-- BUGFILE/ { s/^<!-- \w+ ([^ ]+) -->/\1/ ; p }' $$r) && \
 		L=$$(sed -nr '/<!-- BUGLINE/ { s/^<!-- \w+ ([^ ]+) -->/\1/ ; p }' $$r) && \
 		echo "$$F:$$L: $$D" | sed 's,^/usr/src/beast/,,' ; \
-	      done > $(CURDIR)/out/logs/scan-build.log
-	time misc/blame-lines -b $(CURDIR)/out/logs/scan-build.log
+	      done > out/logs/scan-build.log
+	$(Q) shopt -s nullglob ; \
+	      for d in out/scan-build/20??-??-??-*/ ; do \
+		rm -rf out/logs/html/ ; \
+		mv -v "$$d" out/logs/html/ || exit 1 ; \
+		break ; \
+	      done
+	$(Q) rm -rf out/scan-build/
+	time misc/blame-lines -b out/logs/scan-build.log
 .PHONY: scan-build
 # Note, 'make scan-build' requires 'configure CC=clang CXX=g++' to generate any reports.
