--- a/misc/Makefile.sub
+++ b/misc/Makefile.sub
@@ -6,8 +6,19 @@
 # Instead, misc/Makefile.sub serves as an extension to the toplevel make
 # rules and provides continuous integration/development rules.
 
+# == cppcheck ==
+cppcheck:
+	$(AM_V_GEN)
+	$(Q) mkdir -p out/logs/
+	misc/run-cppcheck.sh
+	$(Q) mv -v cppcheck.err out/logs/cppcheck.log
+	misc/blame-lines -b out/logs/cppcheck.log
+.PHONY: cppcheck
+# A regular cppcheck run can be carried out before the sources are built
+
 # == scan-build ==
 scan-build:
+	$(AM_V_GEN)
 	$(Q) rm -rf out/scan-build/
 	$(Q) mkdir -p out/logs/ out/scan-build/
 	$(Q) echo "  CHECK   " "for CXX to resemble clang++"
