DATA: beast.desktop.in: fix missing semicolon
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/data/beast.desktop.in
+++ b/data/beast.desktop.in
@@ -7,5 +7,5 @@ Icon=beast
 TryExec=beast
 Exec=beast %F
 Terminal=false
-Categories=AudioVideoEditing;AudioVideo;Audio;Midi;Sequencer;Mixer;Music;Player;GNOME
+Categories=AudioVideoEditing;AudioVideo;Audio;Midi;Sequencer;Mixer;Music;Player;GNOME;
 MimeType=audio/x-bse;audio/x-bsewave;
